--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.5",
     "isomorphic-unfetch": "^3.0.0",
-    "next": "^12.1.6",
+    "next": "^15.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -21,6 +24,6 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.6.0",
-    "serve": "^13.0.2"
+    "serve": "^14.2.4"
   }
 }
